- fixed iteration limit determination in sepa_closecuts
- fixed bug in prop_vbound w.r.t. creation of variables during the search
- fixed bug using a too hard comparison on the objective-infeasible-decision in constraint enforcement
- fixed possible cycling in enforcement of nonlinear constraints due to too early removal of newly added cuts from LP

features:
- can now output the solutions in the solution pool in the interactive shell
- updated Mosek interface to compile with Mosek 7, too
- reading erroneous CIP files can now output some indication of syntax errors
- can now run splint on core files
- cons_xor now uses the integral variable in propagation
- allowed to switch on/off the solution debugging

performance improvements:
- improved SCIPlpiAdd{Cols,Rows}() in SoPlex LPi

interface:
- allow to add columns (rows) with nonzero indices beyond current number of rows (columns) in SoPlex LPi
- remove problematic function cons_indicator:SCIPsetSlackVarIndicator()
- added methods SCIPmarkColNotRemovableLocal() and SCIPmarkRowNotRemovableLocal() to forbid removal of an column/row
  from the LP in the current node


SCIP version 3.0.1
==================

fixed bugs:
- fixed bug when adding linear constraints with non active variables in solving process, during propagation this
  resulted in changing the row, which is not possible for unmodifiable constraints/locked rows
- fixed bug in copying nonlinear constraints during presolve (nonlinear part was not copied)
- fixed issue with deleting varbound constraints in case the bound change was not applied
- fixed small issue in pseudo objective propagator w.r.t. propagating the lower bound globally
- fixed issue with applying the effective root depth during the search
- fixed bugs in parsing dis-/conjunctive constraints
- fixed minor bug in conjunctive constraint handler printing wrong constraint
- fixed bug in disjunctive constraint handler when enforcing a constraint